--- a/config/storage.yml
+++ b/config/storage.yml
@@ -2,10 +2,13 @@ test:
   service: Disk
   root: <%= Rails.root.join("tmp/storage") %>
 
-local:
-  service: Disk
-  root: <%= Rails.root.join("storage") %>
+# local:
+#   service: Disk
+#   root: <%= Rails.root.join("storage") %>
 
+cloudinary:
+  service: Cloudinary
+  # Any other settings you want, to be sent on all requests, can be included here as well.
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
