Mailer: username and password moved to .env file

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 API_KEY=958232315514486
 API_SECRET=YcU7bATbEAhZe95RXiaesOeWe6k
 CLOUD_NAME=alihaidar-devsinc
+EMAIL_USER_NAME=ali.haidar@devsinc.com
+EMAIL_PASSWORD=fyxfkkwzxofpfqnz
