Dev: added host url in .env file

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ API_SECRET=YcU7bATbEAhZe95RXiaesOeWe6k
 CLOUD_NAME=alihaidar-devsinc
 EMAIL_USER_NAME=ali.haidar@devsinc.com
 EMAIL_PASSWORD=fyxfkkwzxofpfqnz
+HOST=insta-by-ali-haidar.herokuapp.com
