--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ CLOUD_NAME=alihaidar-devsinc
 EMAIL_USER_NAME=ali.haidar@devsinc.com
 EMAIL_PASSWORD=fyxfkkwzxofpfqnz
 HOST=insta-by-ali-haidar.herokuapp.com
+ADDRESS=smtp.gmail.com
+DEFAULT_URL=localhost
+MAIL_HOST=devsinc.com
+
