--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -8,7 +8,7 @@ development:
 production:
   cloud_name: <%= ENV[CLOUD_NAME] %>
   api_key: <%= ENV[API_KEY] %>
-  api_secret: <%= ENV['API_SECRET'] %>
+  api_secret: <%= ENV[API_SECRET] %>
   enhance_image_tag: true
   static_file_support: true
 test:
