--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -1,8 +1,8 @@
 ---
 development:
-  cloud_name: <%= ENV[CLOUD_NAME] %>
-  api_key: <%= ENV[API_KEY] %>
-  api_secret: <%= ENV[API_SECRET] %>
+  cloud_name: <%= ENV['CLOUD_NAME'] %>
+  api_key: <%= ENV['API_KEY'] %>
+  api_secret: <%= ENV['API_SECRET'] %>
   enhance_image_tag: true
   static_file_support: false
 production:
@@ -12,8 +12,8 @@ production:
   enhance_image_tag: true
   static_file_support: true
 test:
-  cloud_name: <%= ENV[CLOUD_NAME] %>
-  api_key: <%= ENV[API_KEY] %>
-  api_secret: <%= ENV[API_SECRET] %>
+  cloud_name: <%= ENV['CLOUD_NAME'] %>
+  api_key: <%= ENV['API_KEY'] %>
+  api_secret: <%= ENV['API_SECRET'] %>
   enhance_image_tag: true
   static_file_support: false
