--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,10 +1,12 @@
 development:
-  adapter: async
+  adapter: redis
+  url: rediss://:on61h2Cgz0joTy2VbwTxmtyGtCieZxVG@redis-11071.c60.us-west-1-2.ec2.cloud.redislabs.com:11071
+  channel_prefix: instagram_production
 
 test:
   adapter: async
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: rediss://:on61h2Cgz0joTy2VbwTxmtyGtCieZxVG@redis-11071.c60.us-west-1-2.ec2.cloud.redislabs.com:11071
   channel_prefix: instagram_production
